--- a/WindSpigot-Server/pom.xml
+++ b/WindSpigot-Server/pom.xml
@@ -104,6 +104,14 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.36</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
 		<!-- testing -->
 		<dependency>
 			<groupId>junit</groupId>
