--- a/.github/workflows/windspigot-build-and-upload.yml
+++ b/.github/workflows/windspigot-build-and-upload.yml
@@ -8,10 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip]')"
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 17
         server-id: github
         settings-path: ${{ github.workspace }}
@@ -27,14 +28,9 @@ jobs:
     - name: Build with Maven
       run: mvn package --file $GITHUB_WORKSPACE/pom.xml
       
-    - name: Upload Server Artifact
-      uses: actions/upload-artifact@v2.2.0
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-server
-        path: ${{ github.workspace }}/WindSpigot-Server/target/WindSpigot.jar
-
-    - name: Upload API Artifact
-      uses: actions/upload-artifact@v2.2.0
-      with:
-        name: WindSpigot-API
-        path: ${{ github.workspace }}/WindSpigot-API/target/WindSpigot-API.jar
+        path: |
+          WindSpigot-Server/target/
