--- a/.github/workflows/windspigot-build-and-upload.yml
+++ b/.github/workflows/windspigot-build-and-upload.yml
@@ -26,11 +26,15 @@ jobs:
           ${{ runner.os }}-maven-
       
     - name: Build with Maven
-      run: mvn package --file $GITHUB_WORKSPACE/pom.xml
+      run: mvn package --file pom.xml
       
-    - name: Upload Artifacts
+    - name: Upload Server Artifact
       uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-server
-        path: |
-          WindSpigot-Server/target/
+        path: WindSpigot-Server/target/WindSpigot.jar
+    - name: Upload API Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: WindSpigot-API
+        path: WindSpigot-API/target/WindSpigot-API.jar
