--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -12,8 +12,10 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 17
         server-id: github
+        cache: 'maven'
 
     - name: Build with Maven
-      run: mvn clean package --file $GITHUB_WORKSPACE/pom.xml
+      run: mvn clean package --file pom.xml
