--- a/.github/workflows/windspigot-build-and-upload.yml
+++ b/.github/workflows/windspigot-build-and-upload.yml
@@ -15,7 +15,7 @@ jobs:
         distribution: 'temurin'
         java-version: 17
         server-id: github
-        settings-path: ${{ github.workspace }}
+        cache: 'maven'
         
     - name: Cache local Maven repository
       uses: actions/cache@v3
@@ -26,15 +26,16 @@ jobs:
           ${{ runner.os }}-maven-
       
     - name: Build with Maven
-      run: mvn package --file pom.xml
+      run: mvn package --file $GITHUB_WORKSPACE/pom.xml
       
     - name: Upload Server Artifact
       uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-server
-        path: WindSpigot-Server/target/WindSpigot.jar
+        path: ${{ github.workspace }}/WindSpigot-Server/target/WindSpigot.jar
+
     - name: Upload API Artifact
       uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-API
-        path: WindSpigot-API/target/WindSpigot-API.jar
+        path: ${{ github.workspace }}/WindSpigot-API/target/WindSpigot-API.jar
