--- a/.github/workflows/windspigot-build-and-upload.yml
+++ b/.github/workflows/windspigot-build-and-upload.yml
@@ -26,16 +26,16 @@ jobs:
           ${{ runner.os }}-maven-
       
     - name: Build with Maven
-      run: mvn package --file $GITHUB_WORKSPACE/pom.xml
+      run: mvn package --file pom.xml
       
     - name: Upload Server Artifact
       uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-server
-        path: ${{ github.workspace }}/WindSpigot-Server/target/WindSpigot.jar
+        path: WindSpigot-Server/target/WindSpigot.jar
 
     - name: Upload API Artifact
       uses: actions/upload-artifact@v3
       with:
         name: WindSpigot-API
-        path: ${{ github.workspace }}/WindSpigot-API/target/WindSpigot-API.jar
+        path: WindSpigot-API/target/WindSpigot-API.jar
